# mlp_scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: test.json  train.json
data/: sample_data.csv
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: Misc.hpp
results/: results.csv
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp  test.cpp  train.cpp
src/neural_network/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp  setErrors.cpp  train.cpp
src/utils/: Misc.cpp
weights/: weights.json
